--- a/How_it_works.ipynb
+++ b/How_it_works.ipynb
@@ -5,9 +5,13 @@
    "metadata": {},
    "source": [
     "# 1 图像部分\n",
-    "- grab_screen.py (屏幕图像抓取)\n",
-    "- get_vertices.py (顶点位置获取)\n",
-    "- get_status.py (状态获取)"
+    "- pysekiro\n",
+    "    - img_tools\n",
+    "        - \\__init__.py\n",
+    "            - adjustment.py (游戏窗口校准)\n",
+    "            - get_status.py (状态获取)\n",
+    "            - get_vertices.py (顶点位置获取)\n",
+    "            - grab_screen.py (屏幕图像抓取)"
    ]
   },
   {
@@ -21,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "查看代码 [grab_screen.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/grab_screen.py)"
+    "查看代码 [grab_screen.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/img_tools/grab_screen.py)"
    ]
   },
   {
@@ -47,18 +51,8 @@
     "GAME_WIDTH = 1280\n",
     "GAME_HEIGHT = 720\n",
     "\n",
-    "# 标准窗口大小\n",
-    "STANDARD_WIDTH = 480\n",
-    "STANDARD_HEIGHT = 270\n",
-    "\n",
-    "FRAME_COUNT = 1\n",
-    "\n",
     "def get_screen():\n",
-    "    # 屏幕捕获，并图像缩放\n",
-    "    screen = grab_screen(region=(0, 30, GAME_WIDTH, GAME_HEIGHT+30))\n",
-    "    screen = cv2.resize(screen, (STANDARD_WIDTH, STANDARD_HEIGHT))\n",
-    "\n",
-    "    return screen\n",
+    "    return grab_screen(region=(0, 30, GAME_WIDTH, GAME_HEIGHT+30))\n",
     "~~~"
    ]
   },
@@ -70,7 +64,7 @@
    "source": [
     "# 运行以下代码，就会抓取当前的屏幕图像\n",
     "import cv2\n",
-    "from pysekiro.grab_screen import get_screen\n",
+    "from pysekiro.img_tools.grab_screen import get_screen\n",
     "\n",
     "screen = get_screen()\n",
     "cv2.imshow('screen', screen)\n",
@@ -91,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "查看代码 [get_vertices.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/get_vertices.py)"
+    "查看代码 [get_vertices.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/img_tools/get_vertices.py)"
    ]
   },
   {
@@ -138,9 +132,12 @@
    "source": [
     "# 参照着上面的演示自己试一下\n",
     "import cv2\n",
-    "from pysekiro.get_vertices import get_xywh\n",
+    "from pysekiro.img_tools.get_vertices import get_xywh\n",
+    "# from pysekiro.img_tools.grab_screen import get_screen\n",
     "\n",
-    "img = cv2.imread(\"demo.png\")\n",
+    "# img = get_screen()\n",
+    "img = cv2.imread(\"demo.jpg\")\n",
+    "\n",
     "get_xywh(img)"
    ]
   },
@@ -155,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "查看代码 [get_status.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/get_status.py)"
+    "查看代码 [get_status.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/img_tools/get_status.py)"
    ]
   },
   {
@@ -171,9 +168,9 @@
    "source": [
     "要获取的状态有：自身生命，自身架势，目标生命，目标架势。  \n",
     "- 获取方法\n",
-    "    1. 靠 [get_vertices.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/get_vertices.py) 把状态所在图像的位置抠出来（得到x, x_w, y, y_h）。\n",
-    "    2. 选取ROI区域（例如生命值所在的图像），进行颜色通道分离，取R(Red)通道的图像，然后用图像阈值处理（cv2.threshold）保留红色部分，去除其他部分。\n",
-    "    3. 将红色部分量化"
+    "    1. 靠上面 **1.2顶点位置获取** 把状态所在图像的位置抠出来（得到x, x_w, y, y_h）。\n",
+    "    2. 选取ROI区域（例如生命值所在的图像），进行颜色通道分离，取某颜色通道的图像，然后用图像阈值处理（cv2.threshold）保留关键部分，去除其他部分。\n",
+    "    3. 将关键部分量化"
    ]
   },
   {
@@ -182,7 +179,8 @@
    "source": [
     "- 生命值的获取\n",
     "    1. 截取图像中生命值的区域\n",
-    "    2. 由于剩余生命值部分呈红色，所以进行颜色通道分离，取R(Red)通道的图像\n",
+    "    2. ~~由于剩余生命值部分呈红色，所以进行颜色通道分离，取R(Red)通道的图像~~\n",
+    "    2. 打脸，竟然是G(Green)通道的图像能准确获取数值\n",
     "    3. 通过观察发现，剩余生命值部分的像素点的值全部高于某个值，所以用图像阈值处理，将像素点值低于这个值的设置为0\n",
     "    4. 处理完毕，获取数值\n",
     "- **注意：目前设置的阈值不是最优的，但获取正常数值的稳定性较高，所以暂时使用这个阈值。如果未来发现更合适的阈值，可能会更改此阈值**\n",
@@ -190,28 +188,31 @@
     "~~~python\n",
     "# 获取自身生命\n",
     "def get_Self_HP(img):\n",
-    "    img_roi = roi(img, x=29, x_w=182, y=246, y_h=246+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    img_roi = roi(img, x=77, x_w=489, y=656, y_h=656+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
-    "    r = r[0]\n",
-    "    retval, img_th = cv2.threshold(r, 100, 255, cv2.THRESH_TOZERO)           # 图像阈值处理，像素点的值低于100的设置为0\n",
-    "    img_th = np.reshape(img_th, r.shape)\n",
+    "    g = g[0]\n",
+    "    retval, img_th = cv2.threshold(g, 50, 255, cv2.THRESH_TOZERO)             # 图像阈值处理，像素点的值低于50的设置为0\n",
+    "    retval, img_th = cv2.threshold(img_th, 70, 255, cv2.THRESH_TOZERO_INV)    # 图像阈值处理，像素点的值高于70的设置为0\n",
+    "    img_th = np.reshape(img_th, g.shape)\n",
     "    Self_HP = get_value(img_th)    # 获取数值\n",
-    "    # print('\\n', img_th)\n",
-    "    # print(Self_HP)\n",
+    "#     print('\\n', img_th)\n",
+    "#     print(Self_HP)\n",
     "    return Self_HP\n",
     "\n",
     "# 获取目标生命  \n",
     "def get_Target_HP(img):\n",
-    "    img_roi = roi(img, x=29, x_w=130, y=25, y_h=25+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    img_roi = roi(img, x=77, x_w=349, y=67, y_h=67+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
-    "    r = r[0]\n",
-    "    retval, img_th = cv2.threshold(r, 80, 255, cv2.THRESH_TOZERO)           # 图像阈值处理，像素点的值低于80的设置为0\n",
-    "    img_th = np.reshape(img_th, r.shape)\n",
+    "    g = g[0]\n",
+    "    retval, img_th = cv2.threshold(g, 60, 255, cv2.THRESH_TOZERO_INV)           # 图像阈值处理，像素点的值高于60的设置为0\n",
+    "    img_th = np.reshape(img_th, g.shape)\n",
     "    Target_HP = get_value(img_th)    # 获取数值\n",
     "#     print('\\n', img_th)\n",
     "#     print(Target_HP)\n",
     "    return Target_HP\n",
-    "~~~"
+    "~~~\n",
+    "\n",
+    "![demo_get_Self_HP.gif](https://github.com/ricagj/pysekiro/blob/main/imgs/demo_get_Self_HP.gif?raw=true)"
    ]
   },
   {
@@ -232,15 +233,15 @@
     "~~~python\n",
     "# 获取自身架势\n",
     "def get_Self_Posture(img):\n",
-    "    img_roi = roi(img, x=240, x_w=290, y=234, y_h=234+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    img_roi = roi(img, x=641, x_w=775, y=625, y_h=625+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
     "    r = r[0]\n",
-    "    if 150 < r[0] < 165:    # 开启条件1\n",
-    "        retval, img_th = cv2.threshold(r, 130, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于130的设置为0\n",
+    "    if 169 < r[0] < 173:    # 开启条件1\n",
+    "        retval, img_th = cv2.threshold(r, 120, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于120的设置为0\n",
     "        img_th = np.reshape(img_th, r.shape)\n",
     "        Self_Posture = get_value(img_th)\n",
-    "    elif r[0] > 200:    # 开启条件2\n",
-    "        retval, img_th = cv2.threshold(r, 200, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于200的设置为0\n",
+    "    elif r[0] > 253:    # 开启条件2\n",
+    "        retval, img_th = cv2.threshold(r, 220, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于220的设置为0\n",
     "        img_th = np.reshape(img_th, r.shape)\n",
     "        Self_Posture = get_value(img_th)\n",
     "    else:\n",
@@ -252,20 +253,22 @@
     "\n",
     "# 获取目标架势\n",
     "def get_Target_Posture(img):\n",
-    "    img_roi = roi(img, x=240, x_w=327, y=17, y_h=17+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    img_roi = roi(img, x=641, x_w=874, y=46, y_h=46+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
     "    r = r[0]\n",
-    "    if r[0] > 180:    # 开启条件1\n",
-    "        retval, img_th = cv2.threshold(r, 140, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于140的设置为0\n",
+    "    if r[0] > 200:    # 开启条件1\n",
+    "        retval, img_th = cv2.threshold(r, 130, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于130的设置为0\n",
     "        img_th = np.reshape(img_th, r.shape)\n",
     "        Target_Posture = get_value(img_th)\n",
     "    else:\n",
     "        img_th = None\n",
     "        Target_Posture = 0\n",
-    "    # print('\\n', img_th)\n",
-    "    # print(Target_Posture)\n",
+    "#     print('\\n', img_th)\n",
+    "#     print(Target_Posture)\n",
     "    return Target_Posture\n",
-    "~~~"
+    "~~~\n",
+    "\n",
+    "![demo_get_Self_Posture.gif](https://github.com/ricagj/pysekiro/blob/main/imgs/demo_get_Self_Posture.gif?raw=true)"
    ]
   },
   {
@@ -313,7 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "查看代码 [get_keys.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/get_keys.py)"
+    "查看代码 [get_keys.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/key_tools/get_keys.py)"
    ]
   },
   {
@@ -411,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "查看代码 [direct_keys.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/direct_keys.py)"
+    "查看代码 [direct_keys.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/key_tools/direct_keys.py)"
    ]
   },
   {
@@ -448,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "查看代码 [actions.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/actions.py)"
+    "查看代码 [actions.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/key_tools/actions.py)"
    ]
   },
   {
@@ -548,8 +551,7 @@
    "metadata": {},
    "source": [
     "~~~python\n",
-    "# 根据 collect_data.py 中的 get_output()\n",
-    "def act(action):\n",
+    "def act(action=4, WS=2, AD=2):\n",
     "    \n",
     "    if   action == 0:\n",
     "        act = Attack       # 攻击\n",
@@ -559,9 +561,8 @@
     "        act = Step_Dodge   # 垫步\n",
     "    elif action == 3:\n",
     "        act = Jump         # 跳跃\n",
-    "    elif action == 4:\n",
-    "        act = NOKEY        # 无键\n",
-    "\n",
+    "    else:\n",
+    "        act = NOKEY        # 无键, 无动作\n",
     "    act_process = threading.Thread(target=act)\n",
     "    act_process.start()\n",
     "~~~"
